<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttonOrangeColor">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/buttonOrangeColor"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                style="@style/ToolbarTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login" />

            <TextView
                android:id="@+id/changeLanguageTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_horizontal"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/english"
                android:textColor="@color/white"

                android:drawablePadding="@dimen/_5sdp"
                android:textSize="@dimen/_15sdp"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/buttonOrangeColor"
        android:padding="@dimen/_15sdp"
      >
        <ImageView
            android:id="@+id/loginLogoIv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:padding="@dimen/_10sdp"
            android:src="@mipmap/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailAddressTextLayout"
            style="@style/LoginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:errorTextAppearance="@style/error_appearance"
            app:layout_constraintTop_toBottomOf="@+id/loginLogoIv">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailAddressEditText"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                app:backgroundTint="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTextLayout"
            style="@style/LoginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:errorTextAppearance="@style/error_appearance"
            app:layout_constraintTop_toBottomOf="@+id/emailAddressTextLayout"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="30"
                app:backgroundTint="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/ButtonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button_black_alpha_background"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextLayout" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/forgotPasswordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_18sdp"
            android:text="@string/forgot_password_"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/viewLeft"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/orTv"
            app:layout_constraintEnd_toStartOf="@+id/orTv"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTv"
            app:layout_constraintTop_toTopOf="@+id/orTv" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/orTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/viewRight"
            app:layout_constraintStart_toEndOf="@+id/viewLeft"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTv" />

        <TextView
            android:id="@+id/viewRight"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/orTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/orTv"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTv"
            app:layout_constraintTop_toTopOf="@+id/orTv" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/facebookLoginButton"
            style="@style/ButtonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/login_with_fb"
            android:visibility="gone"
            app:backgroundTint="@color/fbButtonBlueColor"
            app:layout_constraintTop_toBottomOf="@+id/orTv" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dontHaveAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signUp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_2sdp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dontHaveAccountTv" />

        <include
            android:id="@+id/progressBar"
            layout="@layout/progress_dialog_loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>